--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   dartz: ^0.8.8
   provider: ^3.1.0+1
   data_connection_checker: ^0.3.4
+  get_it: ^3.0.3
 
   cupertino_icons: ^0.1.2
 
@@ -23,6 +24,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^4.1.1
+  bloc_test: ^2.1.0
 
 flutter:
   uses-material-design: true
