--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,5 +29,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+  <meta-data
+    android:name="com.google.firebase.ml.vision.DEPENDENCIES"
+    android:value="barcode" />
+  <!-- To use multiple models: android:value="ocr,label,barcode,face" -->
     </application>
 </manifest>
