--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,10 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+<string>Can I use the camera please?</string>
+<!-- TODO: May need to add pod file for iOS -->
+<key>NSMicrophoneUsageDescription</key>
+<string>Can I use the mic please?</string>
 </dict>
 </plist>
