Changed Application Names.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: food_label_app
-description: A new Flutter project.
+name: scaneat
+description: ScanEat Mobile App.
 version: 1.0.0+1
 
 environment:
