--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="dev.iwanphillips.scaneat">
+    package="dev.iwanphillips.scaneat.scaneat">
 
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
@@ -7,8 +7,8 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
     <application
-        android:name="dev.iwanphillips.scaneat.ScanEat"
-        android:label="Scan Eat"
+        android:name="io.flutter.app.FlutterApplication"
+        android:label="scaneat"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
@@ -29,9 +29,5 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-  <meta-data
-    android:name="com.google.firebase.ml.vision.DEPENDENCIES"
-    android:value="barcode" />
-  <!-- To use multiple models: android:value="ocr,label,barcode,face" -->
     </application>
 </manifest>
