--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>food_label_app</string>
+	<string>scaneat</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -41,10 +41,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>NSCameraUsageDescription</key>
-<string>Can I use the camera please?</string>
-<!-- TODO: May need to add pod file for iOS -->
-<key>NSMicrophoneUsageDescription</key>
-<string>Can I use the mic please?</string>
 </dict>
 </plist>
