Added custom loading animation.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   flutter_camera_ml_vision: ^2.2.4
   firebase_ml_vision: ^0.9.3+3
   camera: ^0.5.6+3
-
+  flare_flutter: ^1.8.3
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
@@ -31,6 +31,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   # example:
+  assets:
+    - lib/assets/animations/
   fonts:
     - family: Poppins
       fonts:
