--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dev_dependencies:
     sdk: flutter
   mockito: ^4.1.1
   bloc_test: ^2.1.0
+  flutter_launcher_icons: ^0.7.4
 
 flutter:
   uses-material-design: true
@@ -44,3 +45,8 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
+
+flutter_icons:
+  android: "launcher_icon" 
+  ios: true
+  image_path: "lib/assets/icon/app.png"
