--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,17 +8,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.0+2
-  equatable: ^0.6.1
-  flutter_bloc: ^2.0.0
-  shared_preferences: ^0.5.4+3
+  http: ^0.12.0+3
+  equatable: ^1.0.1
+  flutter_bloc: ^3.0.0
+  shared_preferences: ^0.5.6
   dartz: ^0.8.8
-  provider: ^3.1.0+1
+  provider: ^4.0.1
   data_connection_checker: ^0.3.4
-  get_it: ^3.0.3
+  get_it: ^3.1.0
   flutter_camera_ml_vision: ^2.2.4
-  firebase_ml_vision: ^0.9.3+3
-  camera: ^0.5.6+3
+  firebase_ml_vision: ^0.9.3+5
+  camera: ^0.5.7+2
   flare_flutter: ^1.8.3
   cupertino_icons: ^0.1.2
 
@@ -26,7 +26,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^4.1.1
-  bloc_test: ^2.1.0
+  bloc_test: ^3.0.0
   flutter_launcher_icons: ^0.7.4
 
 flutter:
