--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
     sdk: flutter
   http: ^0.12.0+3
   equatable: ^1.0.1
-  flutter_bloc: ^3.0.0
+  flutter_bloc: ^3.1.0
   shared_preferences: ^0.5.6
   dartz: ^0.8.8
   provider: ^4.0.1
@@ -21,6 +21,7 @@ dependencies:
   camera: ^0.5.7+2
   flare_flutter: ^1.8.3
   cupertino_icons: ^0.1.2
+  flutter_dotenv: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +35,7 @@ flutter:
   # example:
   assets:
     - lib/assets/animations/
+    - .env
   fonts:
     - family: Poppins
       fonts:
@@ -47,6 +49,6 @@ flutter:
   #         weight: 700
 
 flutter_icons:
-  android: "launcher_icon" 
+  android: "launcher_icon"
   ios: true
   image_path: "lib/assets/icon/app.png"
