--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,11 @@ flutter:
     - family: Poppins
       fonts:
         - asset: lib/assets/fonts/Poppins-Regular.ttf
+          weight: 400
         - asset: lib/assets/fonts/Poppins-SemiBold.ttf
+          weight: 600
         - asset: lib/assets/fonts/Poppins-Bold.ttf
+          weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
