--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flare_flutter: ^1.8.3
   cupertino_icons: ^0.1.2
   flutter_svg: ^0.17.0
+  smooth_page_indicator: ^0.1.5
 
 dev_dependencies:
   flutter_test:
